--- a/PSBR/PSBR.csproj
+++ b/PSBR/PSBR.csproj
@@ -49,8 +49,12 @@
       <HintPath>..\packages\Antlr.3.4.1.9004\lib\Antlr3.Runtime.dll</HintPath>
     </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\Users\Uiliam.Uiliam-PC\Google Drive\Templates\BootstrappingMvc-Code-master\SimpleSite\packages\EntityFramework.6.1.0\lib\net45\EntityFramework.dll</HintPath>
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.AspNet.Identity.Core, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -182,14 +186,23 @@
     <Compile Include="Helpers\Bootstrap.cs" />
     <Compile Include="Helpers\GravatarHelper.cs" />
     <Compile Include="Helpers\GravatarOptions.cs" />
+    <Compile Include="Migrations\201505040046326_db-create.cs" />
+    <Compile Include="Migrations\201505040046326_db-create.Designer.cs">
+      <DependentUpon>201505040046326_db-create.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Alert.cs" />
+    <Compile Include="Models\ConselhoRegional.cs" />
     <Compile Include="Models\Entrada.cs" />
     <Compile Include="Models\NotificationViewModel.cs" />
+    <Compile Include="Models\Paciente.cs" />
     <Compile Include="Models\Secao.cs" />
     <Compile Include="Models\Composicao.cs" />
     <Compile Include="Models\Extrato.cs" />
-    <Compile Include="Models\Estabelecimento.cs" />
+    <Compile Include="Models\Responsavel.cs" />
+    <Compile Include="Models\SiteDataContext.cs" />
+    <Compile Include="Models\UfEnum.cs" />
     <Compile Include="Models\Usuario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -1007,6 +1020,11 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201505040046326_db-create.resx">
+      <DependentUpon>201505040046326_db-create.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
